# serializer version: 1
# name: test_json_analyze_count_snapshot
  '''
  2
  
  '''
# ---
# name: test_json_analyze_portfolio_snapshot
  '''
  {
    "status": "ok",
    "result": {
      "portfolio": {
        "schema_version": 2,
        "scope": {
          "matched_session_count": 4,
          "analyzed_session_count": 4,
          "truncated": false,
          "dropped_session_count": 0
        },
        "session_count": {
          "count": 4,
          "evidence_refs": [
            {
              "session_id": "chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>"
            },
            {
              "session_id": "chatgpt-export:eef16694-50ca-432d-8aba-<HASH>"
            },
            {
              "session_id": "claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>"
            },
            {
              "session_id": "claude-code-session:9e11d2cd-0930-4ef6-8a80-<HASH>"
            }
          ]
        },
        "origins": [
          {
            "origin": "chatgpt-export",
            "session_count": 2
          },
          {
            "origin": "claude-code-session",
            "session_count": 2
          }
        ],
        "repos_touched": [],
        "estimated_cost": {
          "total_cost_usd": 0.0,
          "cost_is_estimated": true,
          "unpriced_session_count": 4,
          "tokens": {
            "input_tokens": 0,
            "output_tokens": 0,
            "cache_read_tokens": 0,
            "cache_write_tokens": 0
          },
          "evidence_refs": [
            {
              "session_id": "chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>"
            }
          ]
        },
        "cost_distribution": {
          "count": 0,
          "total": 0.0,
          "minimum": 0.0,
          "p50": 0.0,
          "p90": 0.0,
          "maximum": 0.0,
          "mean": 0.0
        },
        "wallclock_span": {
          "earliest_first_message_at": "<TIMESTAMP>",
          "latest_last_message_at": "<TIMESTAMP>",
          "span_ms": 76452789486,
          "summed_wall_duration_ms": <HASH>,
          "evidence_refs": [
            {
              "session_id": "claude-code-session:9e11d2cd-0930-4ef6-8a80-<HASH>"
            },
            {
              "session_id": "chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>"
            }
          ]
        },
        "wallclock_distribution_s": {
          "count": 4,
          "total": 129570853.603,
          "minimum": 240.0,
          "p50": 600.0,
          "p90": 75192153.659,
          "maximum": 75192153.659,
          "mean": 32392713.40075
        },
        "pathologies": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran over all 4 sessions in scope; no pathology found",
          "by_kind": {},
          "swept_session_count": 4,
          "scope_session_count": 4,
          "missing_digest_count": 0,
          "unanalyzed_session_count": 0,
          "evidence_refs": []
        },
        "context_loss": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran over all 4 sessions in scope; no pathology found",
          "by_kind": {},
          "swept_session_count": 4,
          "scope_session_count": 4,
          "missing_digest_count": 0,
          "unanalyzed_session_count": 0,
          "evidence_refs": []
        },
        "top_pathologies": []
      }
    }
  }
  
  '''
# ---
# name: test_json_analyze_postmortem_snapshot
  '''
  {
    "status": "ok",
    "result": {
      "postmortem": {
        "schema_version": 3,
        "scope": {
          "matched_session_count": 4,
          "analyzed_session_count": 4,
          "truncated": false,
          "dropped_session_count": 0
        },
        "session_count": {
          "count": 4,
          "evidence_refs": [
            {
              "session_id": "chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>"
            },
            {
              "session_id": "chatgpt-export:eef16694-50ca-432d-8aba-<HASH>"
            },
            {
              "session_id": "claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>"
            },
            {
              "session_id": "claude-code-session:9e11d2cd-0930-4ef6-8a80-<HASH>"
            }
          ]
        },
        "wallclock_span": {
          "earliest_first_message_at": "<TIMESTAMP>",
          "latest_last_message_at": "<TIMESTAMP>",
          "span_ms": 76452789486,
          "summed_wall_duration_ms": <HASH>,
          "evidence_refs": [
            {
              "session_id": "claude-code-session:9e11d2cd-0930-4ef6-8a80-<HASH>"
            },
            {
              "session_id": "chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>"
            }
          ]
        },
        "estimated_cost": {
          "total_cost_usd": 0.0,
          "cost_is_estimated": true,
          "unpriced_session_count": 4,
          "tokens": {
            "input_tokens": 0,
            "output_tokens": 0,
            "cache_read_tokens": 0,
            "cache_write_tokens": 0
          },
          "evidence_refs": [
            {
              "session_id": "chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>"
            }
          ]
        },
        "repos_touched": [],
        "top_expensive_session": {
          "status": "no_signal",
          "total_cost_usd": 0.0,
          "cost_is_estimated": false,
          "evidence_refs": [
            {
              "session_id": "chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>"
            }
          ],
          "reason": "no session in scope carries a positive cost figure"
        },
        "subagent_branch_count": {
          "count": 0,
          "evidence_refs": [
            {
              "session_id": "chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>"
            }
          ]
        },
        "longest_tool_gap": {
          "status": "unavailable",
          "reason": "per-tool-call timestamps are not present in the session profile or session digest; longest_tool_gap is not cheaply derivable in v0"
        },
        "wasted_loop": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran over all 4 sessions in scope; no pathology found",
          "by_kind": {},
          "swept_session_count": 4,
          "scope_session_count": 4,
          "missing_digest_count": 0,
          "unanalyzed_session_count": 0,
          "evidence_refs": []
        },
        "failure_mode": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran over all 4 sessions in scope; no pathology found",
          "by_kind": {},
          "swept_session_count": 4,
          "scope_session_count": 4,
          "missing_digest_count": 0,
          "unanalyzed_session_count": 0,
          "evidence_refs": []
        }
      }
    }
  }
  
  '''
# ---
# name: test_json_analyze_snapshot
  '''
  {
    "avg_messages_per_session": 6.5,
    "db_size_bytes": <SIZE_BYTES>,
    "embedded_messages": 0,
    "embedded_sessions": 0,
    "embedding_coverage_measurable": true,
    "embedding_coverage_percent": 0.0,
    "embedding_coverage_unmeasurable_reason": null,
    "embedding_dimensions": {},
    "embedding_models": {},
    "embedding_newest_at": null,
    "embedding_oldest_at": null,
    "embedding_readiness_status": "none",
    "material_origins": {
      "assistant_authored": 6,
      "human_authored": 7
    },
    "message_types": {
      "message": 13
    },
    "messages_missing_embedding_provenance": 0,
    "mode": "stats",
    "origin": null,
    "origin_count": 1,
    "origins": {
      "chatgpt-export": 2
    },
    "outcome": {
      "detail": {},
      "reason": null,
      "state": "ok"
    },
    "pending_embedding_sessions": 0,
    "query": null,
    "retrieval_ready": false,
    "role_counts": {
      "assistant": 6,
      "user": 7
    },
    "stale_embedding_messages": 0,
    "total_attachments": 0,
    "total_messages": 13,
    "total_sessions": 2
  }
  
  '''
# ---
# name: test_json_facets_snapshot
  '''
  {
    "scoped_to_query": false,
    "generated_at": "<TIMESTAMP>",
    "stale": false,
    "stale_age_s": null,
    "budget_exceeded": false,
    "cost_class": "cheap",
    "deadline_s": 2.0,
    "elapsed_s": "<DURATION>",
    "availability": {
      "projection": "facets",
      "state": "ready",
      "cost_class": "cheap",
      "reason": null,
      "detail": null,
      "remediation": null,
      "deadline_s": 2.0,
      "elapsed_s": "<DURATION>",
      "budget_exceeded": false,
      "prerequisites": []
    },
    "complete_families": [
      "total_counts",
      "origins",
      "tags"
    ],
    "deferred_families": {
      "repos": "deferred_by_default",
      "role_counts": "deferred_by_default",
      "material_origins": "deferred_by_default",
      "message_types": "deferred_by_default",
      "action_types": "deferred_by_default",
      "has_flags": "deferred_by_default"
    },
    "family_errors": {},
    "family_status": {
      "total_counts": {
        "state": "complete",
        "reason": null,
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Total counts",
        "source": "session summaries",
        "canonicalization": "unique sessions plus stored message counts",
        "expensive": false
      },
      "origins": {
        "state": "complete",
        "reason": null,
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Provider origins",
        "source": "session summaries",
        "canonicalization": "provider/archive origin; not a repo or authoredness signal",
        "expensive": false
      },
      "tags": {
        "state": "complete",
        "reason": null,
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "User tags",
        "source": "session summaries",
        "canonicalization": "session tags de-duplicated within each session",
        "expensive": false
      },
      "repos": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Canonical repositories",
        "source": "session_repos + repos",
        "canonicalization": "prefer repo_name or origin_url; omit archive/path tokens that are not product repo identities",
        "expensive": true
      },
      "role_counts": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Provider-role counts",
        "source": "messages.role",
        "canonicalization": "provider-reported message role; not authoredness",
        "expensive": true
      },
      "material_origins": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Material origins",
        "source": "messages.material_origin",
        "canonicalization": "authoredness/protocol provenance; separates human text from runtime or assistant material",
        "expensive": true
      },
      "message_types": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Message content types",
        "source": "messages.message_type",
        "canonicalization": "normalized message content kind",
        "expensive": true
      },
      "action_types": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Action types",
        "source": "actions.semantic_type",
        "canonicalization": "normalized semantic action kind",
        "expensive": true
      },
      "has_flags": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Content flags",
        "source": "messages.has_*",
        "canonicalization": "boolean message feature counters",
        "expensive": true
      }
    },
    "origins": {
      "chatgpt-export": 2
    },
    "tags": {},
    "repos": {},
    "cwd_prefixes": {},
    "role_counts": {},
    "message_types": {},
    "material_origins": {},
    "action_types": {},
    "has_flags": {},
    "omitted_facet_counts": {},
    "time_range": null,
    "total_sessions": 2,
    "total_messages": 13,
    "scoped": {
      "origins": {
        "chatgpt-export": 2
      },
      "tags": {},
      "repos": {},
      "role_counts": {},
      "message_types": {},
      "material_origins": {},
      "action_types": {},
      "has_flags": {},
      "omitted": {},
      "total_sessions": 2,
      "total_messages": 13
    },
    "global": {
      "origins": {
        "chatgpt-export": 2
      },
      "tags": {},
      "repos": {},
      "role_counts": {},
      "message_types": {},
      "material_origins": {},
      "action_types": {},
      "has_flags": {},
      "omitted": {},
      "total_sessions": 2,
      "total_messages": 13
    },
    "idf": {
      "origins": {
        "chatgpt-export": 0.0
      }
    },
    "outcome": {
      "state": "ok",
      "reason": null,
      "detail": {}
    }
  }
  
  '''
# ---
# name: test_json_read_all_snapshot
  '''
  {
    "items": [
      {
        "actions": {
          "annotate": {
            "enabled": true,
            "state": "enabled"
          },
          "copy_link": {
            "enabled": true,
            "state": "enabled"
          },
          "open": {
            "enabled": true,
            "state": "enabled"
          }
        },
        "anchor": "session-chatgpt-export-a46b6fce-e78d-447c-bd87-<HASH>",
        "created_at": "<TIMESTAMP>",
        "id": "chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>",
        "message_count": 8,
        "origin": "chatgpt-export",
        "relative_time": "<RELATIVE_AGE>",
        "tags": [],
        "target_ref": {
          "identity_key": "session:chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>",
          "session_id": "chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>",
          "target_id": "chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>",
          "target_type": "session"
        },
        "terminal_state": "unknown",
        "title": "Improving search index performance",
        "title_is_synthesized": false,
        "updated_at": "<TIMESTAMP>",
        "words": 78
      },
      {
        "actions": {
          "annotate": {
            "enabled": true,
            "state": "enabled"
          },
          "copy_link": {
            "enabled": true,
            "state": "enabled"
          },
          "open": {
            "enabled": true,
            "state": "enabled"
          }
        },
        "anchor": "session-chatgpt-export-eef16694-50ca-432d-8aba-<HASH>",
        "created_at": "<TIMESTAMP>",
        "id": "chatgpt-export:eef16694-50ca-432d-8aba-<HASH>",
        "message_count": 5,
        "origin": "chatgpt-export",
        "relative_time": "<RELATIVE_AGE>",
        "tags": [],
        "target_ref": {
          "identity_key": "session:chatgpt-export:eef16694-50ca-432d-8aba-<HASH>",
          "session_id": "chatgpt-export:eef16694-50ca-432d-8aba-<HASH>",
          "target_id": "chatgpt-export:eef16694-50ca-432d-8aba-<HASH>",
          "target_type": "session"
        },
        "terminal_state": "unknown",
        "title": "Debugging flaky async pipeline tests",
        "title_is_synthesized": false,
        "updated_at": "<TIMESTAMP>",
        "words": 47
      }
    ],
    "limit": 20,
    "mode": "list",
    "next_cursor": null,
    "next_offset": null,
    "offset": 0,
    "origin": null,
    "outcome": {
      "detail": {},
      "reason": null,
      "state": "ok"
    },
    "source": "daemon",
    "total": 2,
    "total_unit": "top-level sessions"
  }
  
  '''
# ---
# name: test_markdown_analyze_portfolio_snapshot
  '''
  # Portfolio Report
  
  - **Scope:** archive-start → now
  - **Sessions:** 4 analyzed / 4 matched
  - **Origins:** chatgpt-export (2), claude-code-session (2)
  - **Total cost:** $0.00 _(estimated)_ across 4 sessions, 4 unpriced
  - **Tokens:** in 0, out 0, cache-read 0, cache-write 0
  
  ## Distributions
  
  - Cost per session (USD): no signal
  - Wall time per session: n=4 total=1.29571e+<DURATION> min=240 p50=600 p90=7.51922e+07 max=7.51922e+07 mean=3.23927e+07
  
  ## Failure-mode pathologies
  
  - **Overall:** clean — detectors ran over all 4 sessions in scope; no pathology found
  - **Context loss:** clean — detectors ran over all 4 sessions in scope; no pathology found
  
  
  '''
# ---
# name: test_markdown_analyze_postmortem_snapshot
  '''
  # Postmortem Bundle
  
  ## Scope
  - Matched sessions: 4
  - Analyzed sessions: 4
  - Since: (unbounded)
  - Until: (unbounded)
  - Query: (none)
  
  ## Headline
  
  | Field | Value |
  | --- | --- |
  | session_count | 4 |
  | wallclock_span | span_ms=76452789486, summed_wall_ms=<HASH> |
  | estimated_cost_usd | $0.000000 (estimated) |
  | token_lanes | input=0, output=0, cache_read=0, cache_write=0 |
  | top_expensive_session | no_signal: no session in scope carries a positive cost figure |
  | repos_touched | (none) |
  | subagent_branch_count | 0 |
  | longest_tool_gap | unavailable (per-tool-call timestamps are not present in the session profile or session digest; longest_tool_gap is not cheaply derivable in v0) |
  | wasted_loop | clean (no pathology found across all 4 sessions in scope) |
  | failure_mode | clean (no pathology found across all 4 sessions in scope) |
  
  ## Evidence
  
  | Field | Evidence refs |
  | --- | --- |
  | session_count | chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>, chatgpt-export:eef16694-50ca-432d-8aba-<HASH>, claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>, claude-code-session:9e11d2cd-0930-4ef6-8a80-<HASH> |
  | wallclock_span | claude-code-session:9e11d2cd-0930-4ef6-8a80-<HASH>, chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH> |
  | estimated_cost | chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH> |
  | top_expensive_session | chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH> |
  | subagent_branch_count | chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH> |
  
  
  '''
# ---
# name: test_plain_analyze_count_snapshot
  '''
  2
  
  '''
# ---
# name: test_plain_analyze_portfolio_snapshot
  '''
  Polylogue Portfolio Report
  scope: archive-start → now
  sessions: analyzed=4 matched=4
  origins: chatgpt-export=2, claude-code-session=2
  total_cost: $0.00 (estimated) across 4 sessions, 4 unpriced
  tokens: in=0 out=0 cache_read=0 cache_write=0
  cost_per_session_usd: no signal
  wall_per_session_s: n=4 total=1.29571e+<DURATION> min=240 p50=600 p90=7.51922e+07 max=7.51922e+07 mean=3.23927e+07
  wallclock_span_ms: 76452789486
  pathologies: clean (detectors ran over all 4 sessions in scope; no pathology found)
  context_loss: clean (detectors ran over all 4 sessions in scope; no pathology found)
  
  '''
# ---
# name: test_plain_analyze_postmortem_snapshot
  '''
  Postmortem bundle
    scope: matched=4, analyzed=4
    sessions: 4
    wallclock: span_ms=76452789486 summed_wall_ms=<HASH> (<TIMESTAMP> -> <TIMESTAMP>)
    cost: $0.000000 (estimated)
      tokens: input=0 output=0 cache_read=0 cache_write=0
    top_expensive_session: no_signal (no session in scope carries a positive cost figure)
    repos_touched: (none)
    subagent_branch_count: 0
    longest_tool_gap: unavailable (per-tool-call timestamps are not present in the session profile or session digest; longest_tool_gap is not cheaply derivable in v0)
    wasted_loop: clean (no pathology found across all 4 sessions in scope)
    failure_mode: clean (no pathology found across all 4 sessions in scope)
    evidence:
      session_count: chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>, chatgpt-export:eef16694-50ca-432d-8aba-<HASH>, claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>, claude-code-session:9e11d2cd-0930-4ef6-8a80-<HASH>
      wallclock_span: claude-code-session:9e11d2cd-0930-4ef6-8a80-<HASH>, chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>
      estimated_cost: chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>
      top_expensive_session: chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>
      subagent_branch_count: chatgpt-export:a46b6fce-e78d-447c-bd87-<HASH>
  
  '''
# ---
# name: test_plain_analyze_snapshot
  '''
  Sessions: 2
  Messages: 13
  Attachments: 0
  Origins: 1
  Average messages: 6.5
  
  '''
# ---
# name: test_plain_read_all_origin_filter_snapshot
  '''
  chatgpt-export:…72173fa3  <TIMESTAMP>  chatgpt-export            Improving search index performance (8 msgs)
  chatgpt-export:…e2c328aa  <TIMESTAMP>  chatgpt-export            Debugging flaky async pipeline tests (5 msgs)
  
  '''
# ---
# name: test_plain_read_all_snapshot
  '''
  chatgpt-export:…72173fa3  <TIMESTAMP>  chatgpt-export            Improving search index performance (8 msgs)
  chatgpt-export:…e2c328aa  <TIMESTAMP>  chatgpt-export            Debugging flaky async pipeline tests (5 msgs)
  
  '''
# ---
